# jarvis-rag

./: README.md
backend/: README.md  main.py
backend/rag/: embeddings.py  retriever.py  url_tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
jarvis-rag/backend/: .env  pyproject.toml
jarvis-rag/backend/rag/: graph_chat.py
jarvis-rag/frontend/src/: App.css  App.jsx
