[project]
name = "jarvis-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.1.1",
    "fastapi>=0.119.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.10",
    "lxml>=6.0.2",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "uvicorn>=0.37.0",
]
